css/tailwind.css
/* ... */
pre code {
  background-color: transparent;
  border: none;
  font-size: 100%;
  line-height: inherit;
  padding: 0;
}

kbd {
  background-color: var(--ifm-color-emphasis-0);
  border: 1px solid var(--ifm-color-emphasis-400);
  border-radius: 0.2rem;
  box-shadow: inset 0 -1px 0 var(--ifm-color-emphasis-400);
  color: var(--ifm-color-emphasis-800);
  font: 80% var(--ifm-font-family-monospace);
  padding: 0.15rem 0.3rem;
}

/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

h1,
h2,
h3,
h4,
h5,
h6 {
  color: var(--ifm-heading-color);
  font-family: var(--ifm-heading-font-family);
  font-weight: var(--ifm-heading-font-weight);
  line-height: var(--ifm-heading-line-height);
  margin: var(--ifm-heading-margin-top) 0 var(--ifm-heading-margin-bottom) 0;
}

h1 {
  font-size: var(--ifm-h1-font-size);
}

h2 {
  font-size: var(--ifm-h2-font-size);
}

h3 {
  font-size: var(--ifm-h3-font-size);
}

h4 {
  font-size: var(--ifm-h4-font-size);
}

h5 {
  font-size: var(--ifm-h5-font-size);
}

h6 {
  font-size: var(--ifm-h6-font-size);
}

/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

img {
  max-width: 100%;
}

img[align='right'] {
  padding-left: var(--image-alignment-padding);
}

img[align='left'] {
  padding-right: var(--image-alignment-padding);
}

/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

.markdown {
  --ifm-h1-vertical-rhythm-top: 3;
  --ifm-h2-vertical-rhythm-top: 2;
  --ifm-h3-vertical-rhythm-top: 1.5;
  --ifm-heading-vertical-rhythm-top: 1.25;

  --ifm-h1-vertical-rhythm-bottom: 1.25;
  --ifm-heading-vertical-rhythm-bottom: 1;
}

.markdown:before {
  content: '';
  display: table;
}

.markdown:after {
  clear: both;
  content: '';
  display: table;
}

.markdown > *:last-child {
  margin-bottom: 0 !important;
}

.markdown h1:first-child {
  --ifm-h1-font-size: 3rem;

  margin-bottom: calc(var(--ifm-h1-vertical-rhythm-bottom) * var(--ifm-leading));
}

.markdown > h2 {
  --ifm-h2-font-size: 2rem;

  margin-bottom: calc(var(--ifm-heading-vertical-rhythm-bottom) * var(--ifm-leading));
  margin-top: calc(var(--ifm-h2-vertical-rhythm-top) * var(--ifm-leading));
}

.markdown > h3 {
  --ifm-h3-font-size: 1.5rem;

  margin-bottom: calc(var(--ifm-heading-vertical-rhythm-bottom) * var(--ifm-leading));
  margin-top: calc(var(--ifm-h3-vertical-rhythm-top) * var(--ifm-leading));
}

.markdown > h4,
.markdown > h5,
.markdown > h6 {
  margin-bottom: calc(var(--ifm-heading-vertical-rhythm-bottom) * var(--ifm-leading));
  margin-top: calc(var(--ifm-heading-vertical-rhythm-top) * var(--ifm-leading));
}

/* Consistent spacing between content paragraphs. */

.markdown > pre,
.markdown > ul,
.markdown > p {
  margin-bottom: var(--ifm-leading);
}

.markdown li {
  word-wrap: break-word;
}

.markdown li > p {
  margin-top: var(--ifm-list-paragraph-margin);
}

.markdown li + li {
  margin-top: var(--ifm-list-item-margin);
}

/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/* Lists */

ul,
ol {
  margin: 0 0 var(--ifm-list-margin);
  padding-left: var(--ifm-list-left-padding);
}

ol ol,
ul ol {
  list-style-type: lower-roman;
}

ul ul,
ul ol,
ol ol,
ol ul {
  margin: 0;
}

ul ul ol,
ul ol ol,
ol ul ol,
ol ol ol {
  list-style-type: lower-alpha;
}

/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

table {
  border-collapse: collapse;
  display: block;
  margin-bottom: var(--ifm-spacing-vertical);
  overflow: auto;
}

table thead tr {
  border-bottom: 2px solid var(--ifm-table-border-color);
}

table thead {
  background-color: var(--ifm-table-stripe-background);
}

table tr {
  background-color: var(--ifm-table-background);
  border-top: var(--ifm-table-border-width) solid var(--ifm-table-border-color);
}

table tr:nth-child(2n) {
  background-color: var(--ifm-table-stripe-background);
}

table th,
table td {
  border: var(--ifm-table-border-width) solid var(--ifm-table-border-color);
  padding: var(--ifm-table-cell-padding);
}
/* Prevent applying table styles to redoc wrapper */
.redoc-wrap table th,
.redoc-wrap table td:not([kind='field']) {
  border: none;
}
.redoc-wrap table td[kind='field'] {
  border-right: 0;
  border-bottom: 0;
  border-top: 0;
}

/* Last resort to override the redoc heading colors  */
.redoc-wrap h1,
h2,
h3,
h4,
h5,
h6 {
  color: #fff !important;
}
table th {
  background-color: var(--ifm-table-head-background);
  color: var(--ifm-table-head-color);
  font-weight: var(--ifm-table-head-font-weight);
}

table td {
  color: var(--ifm-table-cell-color);
}

/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

strong {
  font-weight: var(--ifm-font-weight-bold);
}

/* Paragraphs */

p {
  margin: 0 0 var(--ifm-paragraph-margin-bottom);
}

/* Blockquotes */

blockquote {
  border-left: var(--ifm-blockquote-border-left-width) solid var(--ifm-blockquote-border-color);
  box-shadow: var(--ifm-blockquote-shadow);
  color: var(--ifm-blockquote-color);
  font-size: var(--ifm-blockquote-font-size);
  margin: 0 0 var(--ifm-spacing-vertical);
  padding: var(--ifm-blockquote-padding-vertical) var(--ifm-blockquote-padding-horizontal);
}

blockquote > :first-child {
  margin-top: 0;
}

blockquote > :last-child {
  margin-bottom: 0;
}
/* ... */

